# ccaf-housekeeping-python_lib

./: .gitignore  .terraform.lock.hcl  CHANGELOG.md  README.md  main.tf  pyproject.toml  variables.tf
.blog/: adr_001.md
.blog/images/: adr_001.md
src/: schema_registry_client.py
src/ccaf_housekeeping_python_lib/: __init__.py  drop_table_with_associated_resources.py
tests/: test_drop_table_with_associated_resources.py
