[project]
name = "ccaf-flink-app-tracker"
version = "0.01.00.000"
description = "CCAF Statements Tracker App"
readme = "README.md"
requires-python = ">=3.11.9"
authors = [
    { name = "Jeffrey Jonathan Jennings (J3)", email = "j3@thej3.com" }
]
dependencies = [
    "boto3>=1.36.16",
    "confluent-flink-table-api-python-plugin>=1.20.50",
    "confluent-kafka>=2.8.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "setuptools>=65.5.1",
    "urllib3>=2.3.0",
]
