[project]
name = "ccaf-housekeeping-app"
version = "0.01.00.000"
description = "CCAF Housekeeping App"
readme = "README.md"
requires-python = ">=3.11.9"
authors = [
    { name = "Jeffrey Jonathan Jennings (J3)", email = "j3@thej3.com" }
]
dependencies = [
    "boto3>=1.36.16",
    "confluent-flink-table-api-python-plugin>=1.20.50",
    "pytest>=8.3.4",
    "setuptools>=65.5.1",
    "cc-clients-lib @ git+https://github.com/j3-signalroom/cc-clients-lib.git",
]
