
[project]
name = "ccaf-housekeeping-python_lib"
version = "0.01.00.000"
description = "CCAF Housekeeping Library for Python"
readme = "README.md"
requires-python = ">=3.11.9"
authors = [
    { name = "Jeffrey Jonathan Jennings (J3)", email = "j3@thej3.com" }
]

dependencies = [
    "cc-clients-python-lib",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
cc-clients-python-lib = { git = "https://github.com/j3-signalroom/cc-clients-python_lib.git" }
